# CG_ultimate_tic_tac_toe

./: CMakeLists.txt  README.md  a.out  main.cpp  output  test.cpp
.devcontainer/: Dockerfile  devcontainer.json
input/: input1
srcs/: a.out  main.cpp  test.h  uttt.cpp  uttt.hpp
test/: CMakeLists.txt  DartConfiguration.tcl
test/srcs/: maps.cpp  mcts.cpp
